# calvr

config/: ivl-default.xml  mycalvr.xml
include/cvrInput/: PubSub.h  TrackerKinect.h
include/cvrInput/protocol/: skeleton.pb.cc  skeleton.pb.h  skeletonframe.pb.cc  skeletonframe.pb.h
include/cvrUtil/: WebConnection.h
src/cvrInput/: CMakeLists.txt  TrackerKinect.cpp  TrackerPlugin.cpp  TrackingManager.cpp
src/cvrMenu/: MenuButton.cpp  MenuCheckbox.cpp  MenuManager.cpp  SubMenu.cpp  stringprintf.hpp
